--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -8,7 +8,7 @@
 
 ====Synonyms====
 * {{sense|amazement}} {{l|en|really}}, {{l|en|no shit}}, {{l|en|never}}, {{l|en|no}}, {{l|en|no way}}, {{l|en|wow}}, {{l|en|is that so}}
-* {{sense|response to the obvious}} {{l|en|duh}}, {{l|en|really}}, {{l|en|no shit}}, {{l|en|oh really}}, {{l|en|you don't say}}, {{l|en|seriously}}
+* {{sense|response to the obvious}} {{l|en|duh}}, {{l|en|really}}, {{l|en|no shit}}, {{l|en|oh really}}, {{l|en|no really}}, {{l|en|you don't say}}, {{l|en|seriously}}
 
 ====Translations====
 {{trans-top|exclamation of amazement}}
