--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -188,6 +188,7 @@ From {{inh|en|enm|agayn}}, {{m|enm|again}},{{m|enm|ayain}}, {{m|enm|ayen}}, {{m|
 * Old English: {{t|ang|eft}}
 * Pashto: {{t+|ps|بيا|tr=byâ}}
 * Persian: {{t+|fa|دگربار|tr=degarbâr}}, {{t+|fa|دوباره|tr=do-bâre}}, {{t+|fa|باز|tr=bâz}}, {{t|fa|از نو|tr=az now}}
+* Plautdietsch: {{t|pdt|wada}}
 * Polish: {{t+|pl|ponownie}}, {{t+|pl|znowu}}, {{t|pl|jeszcze raz}}, {{t+|pl|znów}}
 * Portuguese: {{t+|pt|de novo}}, {{t|pt|outra vez}}, {{t+|pt|novamente}}
 * Romanian: {{t+|ro|iarăși}}, {{t|ro|din nou}}
