--- a/en/h/hander.4308.wikitext
+++ b/en/h/hander.4308.wikitext
@@ -4,7 +4,7 @@
 ===Pronunciation===
 * {{IPA|en|/ˈhændə(ɹ)/}}
 * {{rhymes|en|ændə(r)}}
-{{rfap|en}}
+** {{audio|en|LL-Q1860 (eng)-Vealhurl-hander.wav|Audio (UK)}}
 
 ===Etymology 1===
 {{suffix|en|hand|er|pos1=verb|id2=agent noun}}
