--- a/en/q/quadrate.802550.wikitext
+++ b/en/q/quadrate.802550.wikitext
@@ -9,7 +9,9 @@ Borrowed from {{bor|en|fro|quadrat||a square}}, from {{der|en|la|quadrātus||squ
 
 ===Pronunciation===
 * {{q|adjective|noun}} {{IPA|en|/ˈkwɒdɹət/|/ˈkwɒdɹeɪt/}}
+** {{audio|en|LL-Q1860 (eng)-Vealhurl-quadrate1.wav|Audio (UK)}}
 * {{q|verb}} {{IPA|en|/kwɒdˈɹeɪt/}}
+** {{audio|en|LL-Q1860 (eng)-Vealhurl-quadrate2.wav|Audio (UK)}}
 ** {{rhymes|en|eɪt}}
 
 ===Adjective===
