--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -155,6 +155,7 @@ Cognate with {{cog|stq|Otter}}, {{cog|nl|otter}}, {{cog|de|Otter}}, {{cog|sv|utt
 * Tamil: {{t+|ta|நீர்நாய்}}
 * Telugu: {{t|te|ఉద్రము}}, {{t|te|నీటి కుక్క}}
 * Thai: {{t+|th|นาก}}
+* Translingual: {{t|mul|🦦}}
 * Turkish: {{t+|tr|susamuru}}, {{t+|tr|lutr}}
 * Turkmen: {{t|tk|gunduz}}
 * Ukrainian: {{t|uk|ви́дра|f}}
