--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -345,6 +345,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 #* {{quote-book|en|year=2014|author=Cammie McGovern|title=Say What You Will|passage=They '''bubbled''' her answers on Scantron tests, changed her sanitary napkins, helped her get in and out of the bathroom with a minimum of fuss.}}
 #* '''2019''', ''Crash Course for the ACT, 6th Edition: Your Last-Minute Guide to Scoring High'', page 15:
 #*: You don’t want to go back and forth between the test booklet and your answer sheet to '''bubble''' your answers.
+# {{lb|en|intransitive}} To join together in a [[support bubble]]
 
 ====Quotations====
 * {{seeCites|en}}
