--- a/en/r/rules of the road.801538.wikitext
+++ b/en/r/rules of the road.801538.wikitext
@@ -16,7 +16,8 @@
 ====Translations====
 {{trans-top|rules and regulations}}
 * Czech: {{t|cs|pravidla silničního provozu|n-p}}
-{{trans-mid}}
 * Finnish: {{t|fi|liikennesäännöt}}
+{{trans-mid}}
+* French: {{t+|fr|code de la route|m}}
 * Hebrew: {{t|he|חֻקֵּי הַדֶּרֶךְ|m-p|tr=khukey haderekh}}
 {{trans-bottom}}
