--- a/en/m/money-grubbing.720246.wikitext
+++ b/en/m/money-grubbing.720246.wikitext
@@ -10,6 +10,6 @@
 # [[fiercely]] [[avaricious]] for [[money]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|fiercely avaricious for money}}
 {{trans-mid}}
 {{trans-bottom}}
