--- a/en/m/misbegotten.720286.wikitext
+++ b/en/m/misbegotten.720286.wikitext
@@ -56,3 +56,4 @@
 * ''{{w|OED}}'' (3rd ed., June 2002), “[http://www.oed.com/view/Entry/119223 misbegotten, ''n. ''and'' adj.'']”
 
 [[Category:English adjectives ending in -en]]
+[[Category:en:People]]
