--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -142,6 +142,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 * Hungarian: {{t+|hu|súly}}
 * Icelandic: {{t+|is|þyngd}}
 * Ido: {{t+|io|pezo}}
+* Ilocano: {{t|ilo|dagsen}}
 * Indonesian: {{t+|id|berat}}, {{t+|id|bobot}}
 * Interlingue: {{t|ie|pesa}}, {{t|ie|póndere}}
 * Irish: {{t|ga|meáchan|m}}
