--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -27,6 +27,8 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * {{l|en|Nintendocore}}
 * {{l|en|Nintendo thumb}}
 * {{l|en|Nintendrone}}
+* {{l|en|Nintendoist}}
+* {{l|en|anti-Nintendoist}}
 
 ====Translations====
 {{trans-top|Nintendo Entertainment System, or other video game system made by Nintendo}}
