--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -123,6 +123,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Turkish: {{t+|tr|aynasız}}
 * Ukrainian: {{t|uk|мент|m}}
 * Vietnamese: {{t+|vi|cớm}}
+* Yiddish: {{t|yi|פּאָליציאַנט|m|tr=politsyánt}}, {{t|yi|פּאָליציאַנטקע|f}}
 {{trans-bottom}}
 
 ===Etymology 4===
