--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -1,7 +1,7 @@
 {{also|Chin|chín|chỉn|-chin|chîⁿ}}
 ==English==
 {{Wiktionary:Picture dictionary/en:head}}
-[[File:Ambroise Thomas 2.jpg|thumb|right|Composer Ambrose Thomas with hand on chin (1).]]
+[[File:Ambroise Thomas 2.jpg|thumb|right|Composer Ambroise Thomas with hand on chin (1).]]
 
 ===Pronunciation===
 * {{enPR|chĭn}}, {{IPA|en|/tʃɪn/}}
