--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -228,7 +228,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Pali: {{t|pi|vatthu|n}}
 * Pashto: {{t|ps|شى|m|tr=šay}}, {{t|ps|څيز|m|tr=ciz}}
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
-* Plautdietsch: {{t|pdt|Dinkj|n}}
+* Plautdietsch: {{t|pdt|Dinkj|n}}, {{t|pdt|Sach|f}}
 * Polish: {{t+|pl|rzecz|f}}, {{t+|pl|coś|n}}
 * Portuguese: {{t+|pt|coisa|f}}, {{t+|pt|cousa|f}}
 * Punjabi: {{t|pa|ਵਸਤੂ|f}}
