--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -21,6 +21,7 @@
 * German: {{t|de|mit seiner Geduld am Ende}}
 * Italian: {{t|it|al limite della sopportazione}}
 * Korean: {{t|ko|진퇴양난에 빠진}}
+* Polish: {{t|pl|u kresu wytrzymałości}}
 * Russian: {{t|ru|на грани срыва}}
 * Scottish Gaelic: {{t|gd|aig an dùbhlan le}}
 {{trans-bottom}}
