--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -125,7 +125,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 * Korean: {{t+|ko|선생님}}, {{t+|ko|씨|alt=-씨}}, {{t+|ko|아저씨}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|کاک}}
-*: Northern Kurdish: {{t+|kmr|birêz}}, {{t+|kmr|kek}}
+*: Northern Kurdish: {{t+|kmr|birêz}}, {{t+|kmr|kek}}, {{t+|kmr|mîrza}}, {{t+|kmr|efendî}}
 * Kyrgyz: {{t+|ky|господин}}, {{t|ky|мырза}}
 * Lao: {{t|lo|ທ່ານ}}, {{t|lo|ທ່ານເອີຽ}}
 * Latin: {{t+|la|dominus|m}}, {{t+|la|domine|m}} {{q|[[vocative case|vocative]]}}
@@ -139,7 +139,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 * Ndzwani Comorian: {{t|wni|mwenye}}
 * Norwegian:
 *: Bokmål: {{t+|nb|herre|m}}
-* Pashto: {{t|ps|آقا|m|tr=aqā}}, {{t|ps|آغا|m|tr=āǧã}}, {{t|ps|ښاغلى|m|tr=ӽāǧᶕlay}}
+* Pashto: {{t|ps|آقا|m|tr=aqā}}, {{t|ps|آغا|m|tr=āǧã}}, {{t|ps|ښاغلى|m|tr=ӽāǧᶕlay}}, {{t+|ps|صاحب|m|tr=sāhéb}}
 * Persian: {{t+|fa|آقا|tr=âqâ}}, {{t+|fa|جناب|tr=jenâb}}
 * Polish: {{t+|pl|pan|m}}, {{t|pl|panie|m}} {{q|[[vocative case|vocative]]}}
 * Portuguese: {{t+|pt|senhor|m}}
