--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -288,6 +288,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 * Greek: {{t+|el|μεραρχία|f}}
 *: Ancient: {{t|grc|τάγμα|n}}, {{t|grc|ἄγημα|n}}
 * Hebrew: {{t|he|אוגדה|f|tr=ugdá|sc=Hebr}}
+* Hungarian: {{t+|hu|hadosztály}}
 * Icelandic: {{t+|is|herdeild|f}}, {{t+|is|deild|f}}
 * Indonesian: {{t+|id|divisi}}
 * Italian: {{t+|it|divisione|f}}
