--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -428,7 +428,7 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 #* {{quote-book|1=en|year=1956|year_published=1972|author=Anthony Burgess|authorlink=Anthony Burgess|title=Time for a Tiger|series=The Malayan Trilogy|page=138|passage=The car soon seemed '''islanded''' in water.}}
 # {{lb|en|transitive}} To set, dot (as if) with islands.
 # {{lb|en|transitive}} To [[isolate]].
-#* {{w|A. E. Housman}}, {{w|A Shropshire Lad}}, XXVII, lines 1-2
+#* '''1896''', {{w|A. E. Housman}}, {{w|A Shropshire Lad}}, XXVII, lines 1-2
 #*: ''High the vanes of {{w|Shrewsbury}} gleam''
 #*: '''Islanded''' in Severn stream.
 
