--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -122,7 +122,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Bashkir: {{tt|ba|сусҡа}}
 * Basque: {{tt+|eu|urde}}, {{tt+|eu|zerri}}, {{tt+|eu|txerri}}
 * Bau Bidayuh: {{tt|sne|oyuo}}
-* Belarusian: {{tt|be|свіння́|f}}, {{t|be|сьвіньня́|f}} {{qualifier|Taraškievica}}
+* Belarusian: {{tt|be|свіння́|f}}, {{tt|be|сьвіньня́|f}} {{qualifier|Taraškievica}}
 * Bengali: {{tt|bn|শুওর}}
 * Bodo: {{t|brx|अमा}}
 * Bouyei: {{tt|pcc|duezmul}}, {{tt|pcc|mul}}
@@ -238,9 +238,9 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Limburgish: {{tt+|li|zwien}}, {{tt+|li|verke}}
 * Lithuanian: {{tt+|lt|kiaulė|f}}
 * Livonian: {{tt|liv|sigā}}
-{{trans-mid}}
 * Low German: {{tt+|nds|Swien|n}}
 * Ludian: {{tt|lud|šiga}}
+{{trans-mid}}
 * Luganda: {{tt|lg|embizzi}}
 * Lusitanian: {{tt|xls|porcom}}, {{tt|xls|porgom}}
 * Luxembourgish: {{tt|lb|Schwäin|n}}
@@ -261,7 +261,9 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Mi'kmaq: {{tt|mic|gulgwi's|an}}
 * Moksha: {{tt|mdf|тува}}
 * Mon: {{tt|mnw|ကၠိက်}}
-* Mongolian: {{tt+|mn|гахай}}
+* Mongolian:
+*: Cyrillic: {{tt+|mn|гахай}}
+*: Uyghurjin: {{tt|mn|ᠭᠠᠬᠠᠢ}}
 * Montagnais: {{tt|moe|kukush}}
 * Motu: {{tt|meu|boroma}}
 * Mountain Koiari: {{tt|kpx|ovo}}
@@ -343,7 +345,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Tetum: {{tt|tet|fahi}}
 * Thai: {{tt+|th|หมู}}
 * Tibetan: {{tt|bo|ཕག་པ}}
-* Tigrinya: {{t|ti|ሓሰማ}}
+* Tigrinya: {{tt|ti|ሓሰማ}}
 * Timugon Murut: {{tt|tih|bawi}}
 * Tiwa: {{t|lax|oa}}
 * Tocharian B: {{tt|txb|suwo}}
