--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -307,6 +307,7 @@ From {{der|en|enm|benden}}, from {{der|en|ang|bendan||to bind or bend (a bow), f
 * Greek: {{t+|el|στροφή|f}}
 *: Ancient: {{t|grc|καμπή|f}}, {{t|grc|ἄγκος|n}}
 * Italian: {{t+|it|curva|f}}
+* Kazakh: {{t|kk|бүгіс}}
 * Latin: {{t|la|curvāmen|n}}, {{t|la|flexus|m}}, {{t|la|campter|m}}
 * Lithuanian: {{t|lt|vingis|m}}
 * Maori: {{t|mi|hawe}} {{qualifier|in a track, road, or river}}, {{t|mi|hawhe}} {{qualifier|in a fenceline}}, {{t|mi|whawhe}} {{qualifier|in a fenceline}}, {{t|mi|noninga}} {{qualifier|in a river}}
