--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -264,6 +264,7 @@ Partially displaced native English {{m|ang|onefold}}.
 * {{anagrams|en|a=eilmps|LEMSIP|impels}}
 
 [[Category:en:One]]
+{{C|en|Personality}}
 
 ----
 
