--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -100,6 +100,10 @@ Possibly from {{m|en|'em}}.
 #* '''1896''', F J Stimsom, ''King Noanett: A Story of Old Virginia and the Massachusetts Bay'', p. 254:
 #*: "Giv'''um''' dinner; smok'''um''' pipe," was all that we could get out of Quatchett.
 
+===Derived terms===
+{{sense|any sense}}
+{{suffixsee|en}}
+
 ===Anagrams===
 * {{anagrams|en|a=mu|-mu-|MU|Mu|mu}}
 
