--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -250,6 +250,7 @@ Occasionally, in very formal or official registers, ''dame'' can be used as a ti
 * {{l|fr|de|d<sup>e</sup>}}, {{l|fr|lady}}, {{l|fr|madame}}
 
 ====Derived terms====
+* {{l|fr|dame blanche}}
 * {{l|fr|dame d'attendre}}
 * {{l|fr|dame d'honneur}}
 * {{l|fr|grande dame}}
