--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -27,6 +27,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 {{trans-top|polygon having four sides}}
 * Arabic: {{t|ar|رباعي الأضلاع}}
 * Armenian: {{t+|hy|քառանիստ}}
+* Azerbaijani: {{t|az|dördbucaq}}
 * Belarusian: {{t+|be|чатырохвуго́льнік|m}}
 * Bengali: {{t|bn|চতুর্ভুজ}}
 * Bulgarian: {{t|bg|четириъгъ́лник|m}}
@@ -50,9 +51,9 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Icelandic: {{t+|is|ferhyrningur|m}}
 * Italian: {{t+|it|quadrilatero|m}}, {{t+|it|quadrangolo|m}}
 * Japanese: {{t+|ja|四辺形|tr=しへんけい, shihenkei|sc=Jpan}}, {{t+|ja|四角形|tr=しかっけい, shikakkei|sc=Jpan}}
+{{trans-mid}}
 * Khmer: {{t+|km|ចតុកោណ}}
 * Korean: {{t+|ko|사각형}}
-{{trans-mid}}
 * Lao: {{t+|lo|ຮູບສີ່ແຈ}}
 * Macedonian: {{t|mk|четириаголник|m}}
 * Malay: {{t|ms|segi empat}}, {{t|ms|caturkona}}, {{t|ms|tetragon}}
