--- a/en/m/multi.34076.wikitext
+++ b/en/m/multi.34076.wikitext
@@ -57,7 +57,7 @@ From {{af|eo|multe|t1=a lot|-i}}.
 ==Hungarian==
 
 ===Etymology===
-{{apocopic form|hu|[[multinacionális]] [[vállalat]]|t=multinational company}}.
+{{ellipsis|hu|[[multinacionális]] [[vállalat]]|t=multinational company}}.
 
 ===Pronunciation===
 * {{hu-IPA}}
