--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -21,6 +21,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 {{en-noun}}
 
 # Any of several intelligent [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domestication|domesticated]] [[animal]] ''[[Sus scrofa]]''.
+#: {{syn|en|Thesaurus:pig}}
 #: {{ux|en|The man kept a pen with two '''pigs''' that he fed from carrots to cabbage.}}
 # {{lb|en|specifically}} A young swine, a [[piglet]] {{qualifier|contrasted with a [[hog]], an adult swine}}.
 #* '''2005''' April, ''Live Swine from Canada, Investigation No. 731-TA-1076 (Final), publication 3766, April 2005, U.S. International Trade Commission'' {{ISBN|1457819899}}, page I-9:
@@ -34,13 +35,16 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 #* '''2019''', Bee Smith, ''Queen Bee's Party''
 #*: So far on the streets there's been a lot of metallic pink (the kind of pink as in the shade of '''pig''' you get, and this is exactly the shade of the diary I've been writing in) {{...}}
 # {{lb|en|derogatory|slang}} Someone who overeats or eats rapidly and noisily.
+#: {{syn|en|Thesaurus:glutton}}
 #: {{ux|en|You gluttonous '''pig'''! Now that you've eaten all the cupcakes, there will be none for the party!}}
 # {{lb|en|derogatory|slang}} A [[lecherous]] or [[sexist]] man.
 #: {{ux|en|She considered him a '''pig''' as he invariably stared at her bosom when they talked.}}
 # {{lb|en|derogatory|slang}} A [[dirty]] or [[slovenly]] person.
 #: {{ux|en|He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.}}
 # {{lb|en|derogatory}} A very [[obese]] person.
+#: {{syn|en|Thesaurus:fat person}}
 # {{senseid|en|police officer}} {{lb|en|now|chiefly|US|UK|Australia|derogatory|slang}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
+#: {{syn|en|Thesaurus:police officer}}
 #: {{ux|en|The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.}}
 #* {{quote-song|en|title=The Revolution Will Not Be Televised|author={{w|Gil Scott-Heron}}|year=1971|passage=There will be no pictures of '''pigs''' shooting down brothers on the instant replay}}
 #* '''1989''', {{w|Dan Simmons}}, ''{{w|Carrion Comfort}}'', [http://books.google.com.au/books?id=ClXFYXTcrXUC&pg=PA359&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 359],
@@ -65,13 +69,6 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 # {{lb|en|US|military|slang}} The general-purpose M60 [[machine gun]], considered to be heavy and bulky.
 #: {{ux|en|Unfortunately, the M60 is about twenty-four pounds and is very unbalanced. You try carrying the '''pig''' around the jungle and see how you feel.}}
 # {{lb|en|uncountable}} A simple [[dice]] [[game]] in which players roll the dice as many times as they like, either accumulating a greater score or losing previous points gained.
-
-=====Synonyms=====
-* {{sense|mammal of genus Sus}} {{l|en|hog}}, {{l|en|swine}}, see also [[Thesaurus:pig]]
-* {{sense|someone who overeats or eats rapidly}} see [[Thesaurus:glutton]]
-* {{sense|nasty or disgusting person}} see [[Thesaurus:jerk]]
-* {{sense|police officer}} see [[Thesaurus:police officer]]
-* {{sense|fat person}} see [[Thesaurus:fat person]]
 
 =====Hyponyms=====
 * {{sense|mammal of genus Sus}} {{l|en|boar}}, {{l|en|herd boar}}; [[sow]], [[brood sow]]; [[piglet]], [[piggy]]
