--- a/en/f/fufu.855764.wikitext
+++ b/en/f/fufu.855764.wikitext
@@ -1,12 +1,29 @@
 {{also|fufú|fúfu|fūfù|foo-foo}}
 
 ==English==
+{{wikipedia|fufu}}
+
+===Alternative forms===
+* [[foofoo]]
+* [[foo-foo]]
+
+===Etymology===
+From West African languages such as [[Ewe]], {{m|ln|fufú|}} meaning 'white-white'.
 
 ===Noun===
 {{en-noun|-}}
 
-# {{alternative spelling of|en|foo-foo}}
+# A [[dish]] of boiled, mashed [[cassava]] mixed with [[plantain]], [[yam]]s, or other starchy vegetables, common as food in West and Equatorial [[Africa]] and the [[Caribbean]]. Sold in speciality stores {{qualifier|US}} in dry powdered or granulated form.
 #* {{quote-book|en|year=2018|author=[[w:Nnedi Okorafor|Nnedi Okorafor]]|title=[[w:Who Fears Death|Who Fears Death]]|publisher=Harper''Voyager''|page=192|passage=“I want some real food,” Binta angrily said. “Like '''fufu''' and egusi soup.”}}
+
+====Synonyms====
+* {{sense|dish of yams etc}} [[choke-me]] {{qualifier|Caribbean}}
+
+===References===
+* Frederic Gomes Cassidy and Robert Brock Le Page (editors), ''Dictionary of Jamaican English'', Second Edition, University of the West Indies Press (2002), [http://books.google.com/books?id=_lmFzFgsTZYC&pg=PA185&dq=foo-foo page 185].
+
+[[Category:en:Foods]]
+
 ----
 
 ==Krio==
@@ -17,6 +34,6 @@ From any of various African languages that share this word.
 ===Noun===
 {{head|kri|noun}}
 
-# [[foo-foo]]
+# [[#English|fufu]]
 
 {{C|kri|Foods}}
