--- a/en/f/foofoo.855763.wikitext
+++ b/en/f/foofoo.855763.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 {{en-noun|-}}
 
-# {{alternative spelling of|en|foo-foo}}
+# {{alternative spelling of|en|fufu}}
 
 ===Proper noun===
 {{en-proper noun}}
